--- a/GE_Lecture3/GE_Lecture3.vcxproj.filters
+++ b/GE_Lecture3/GE_Lecture3.vcxproj.filters
@@ -642,6 +642,9 @@
     <None Include="teraccgda.gem">
       <Filter>Resource Files\Example</Filter>
     </None>
+    <None Include="bamboo.gem">
+      <Filter>Resource Files\Example</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Textures\Assorted1\bazaar\Textures\riiveayqx_2K_BaseColor.jpg">
@@ -2754,6 +2757,27 @@
       <Filter>Resource Files\Example</Filter>
     </Image>
     <Image Include="teraccgda_2K_Roughness.jpg">
+      <Filter>Resource Files\Example</Filter>
+    </Image>
+    <Image Include="bamboo branch.png">
+      <Filter>Resource Files\Example</Filter>
+    </Image>
+    <Image Include="bamboo branch_Normal.png">
+      <Filter>Resource Files\Example</Filter>
+    </Image>
+    <Image Include="bamboo branch_roughness.png">
+      <Filter>Resource Files\Example</Filter>
+    </Image>
+    <Image Include="teraccgda_2K_BaseColor.png">
+      <Filter>Resource Files\Example</Filter>
+    </Image>
+    <Image Include="teraccgda_2K_Gloss.png">
+      <Filter>Resource Files\Example</Filter>
+    </Image>
+    <Image Include="teraccgda_2K_Normal.png">
+      <Filter>Resource Files\Example</Filter>
+    </Image>
+    <Image Include="teraccgda_2K_Roughness.png">
       <Filter>Resource Files\Example</Filter>
     </Image>
   </ItemGroup>
